5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4140/executions/1724_2521.log
== TEST (2019-05-14 11:55:59) 
-- CODE:
n=int(input)
i=2
soma=0
while(i<n+1):
	calc=(1/3)*(i)/(i*2)+1]
	soma=soma+calc
total=2*(1+1/3)+soma
print(round(total,10))
-- ERROR:
File "XXXX", line 5
    calc=(1/3)*(i)/(i*2)+1]
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:56:12) 
-- CODE:
n=int(input)
i=2
soma=0
while(i<n+1):
	calc=(1/3)*(i)/(i*2)+1
	soma=soma+calc
total=2*(1+1/3)+soma
print(round(total,10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input)
TypeError: int() argument must be a string, a bytes-like object or a number, not 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:56:22) 
-- CODE:
n=int(input())
i=2
soma=0
while(i<n+1):
	calc=(1/3)*(i)/(i*2)+1
	soma=soma+calc
total=2*(1+1/3)+soma
print(round(total,10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input)
TypeError: int() argument must be a string, a bytes-like object or a number, not 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:56:36) 
-- CODE:
n=int(input())
i=2
soma=0
while(i<n+1):
	calc=(1/3)*(i)/(i*2)+1
	soma=soma+calc
total=2*(1+1/3)+soma
print(round(total,10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input)
TypeError: int() argument must be a string, a bytes-like object or a number, not 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:57:30) 
-- CODE:
n=int(input())
i=2
soma=0
while(i<n+1):
	calc=(1/3)*(i)/(i*2)+1
	soma=soma+calc
total=2*(1+1/3)+soma
print(round(total,10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input)
TypeError: int() argument must be a string, a bytes-like object or a number, not 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:57:57) 
-- CODE:
n=int(input())
i=2
soma=0
while(i<n+1):
	calc=(1/3)*(i)/(i*2)+1
	soma=soma+calc
	i=i+1
total=2*(1+1/3)+soma
print(round(total,10))
-- OUTPUT:
1821.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:58:57) 
-- CODE:
n=int(input())
i=2
soma=0
while(i<n+1):
	calc=(1/3)*(i)/((i*2)+1)
	soma=soma+calc
	i=i+1
total=2*(1+1/3)+soma
print(round(total,10))
-- OUTPUT:
261.9458395586
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:59:47) 
-- CODE:
n=int(input())
i=2
soma=0
while(i<n+1):
	calc=(1/3)*((i)/((i*2)+1))
	soma=soma+calc
	i=i+1
total=2*(1+1/3)+soma
print(round(total,10))
-- OUTPUT:
261.9458395586
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 12:04:01) 
-- CODE:
n=int(input())
i=2
soma=0
while(i<n+1):
	calc=(1/3)*(i)/(i*2)+1
	soma=soma+calc
total=2*(1+1/3)+soma
print(round(total,10))
-- EXECUTION TIME:
402.953
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:04:41) 
-- CODE:
n=int(input())
i=2
soma=0
variavel1=1/3
while(i<n+1):
	calc=variavl1*((i)/((i*2)+1))
	soma=soma+calc
	variavel1=calc
	i=i+1
total=2*(1+1/3)+soma
print(round(total,10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    calc=variavl1*((i)/((i*2)+1))
NameError: name 'variavl1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:05:05) 
-- CODE:
n=int(input())
i=2
soma=0
variavel1=1/3
while(i<n+1):
	calc=variavel1*((i)/((i*2)+1))
	soma=soma+calc
	variavel1=calc
	i=i+1
total=2*(1+1/3)+soma
print(round(total,10))
-- OUTPUT:
2.9041296601
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:11:01) 
-- CODE:
n=int(input())
i=2
soma=0
variavel1=1/3
while(i<n+1):
	calc=variavel1*((i)/((i*2)+1))
	soma=soma+calc
	variavel1=calc
	i=i+1
total=2*((1+1/3)+soma)
print(round(total,10))
-- OUTPUT:
3.1415926536
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:11:04) 
-- CODE:
n=int(input())
i=2
soma=0
variavel1=1/3
while(i<n+1):
	calc=variavel1*((i)/((i*2)+1))
	soma=soma+calc
	variavel1=calc
	i=i+1
total=2*((1+1/3)+soma)
print(round(total,10))
-- OUTPUT:
3.1415926536
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:11:36) 
-- CODE:
n=int(input())
i=2
soma=0
variavel1=1/3
while(i<n+1):
	calc=variavel1*((i)/((i*2)+1))
	soma=soma+calc
	variavel1=calc
	i=i+1
total=2*((1+1/3)+soma)
print(round(total,10))
-- OUTPUT:
3.1415926536
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 12:11:48) 
-- CODE:
n=int(input())
i=2
soma=0
variavel1=1/3
while(i<n+1):
	calc=variavel1*((i)/((i*2)+1))
	soma=soma+calc
	variavel1=calc
	i=i+1
total=2*((1+1/3)+soma)
print(round(total,10))
-- EXECUTION TIME:
0.133448
-- TEST CASE 1:
---- input:
1560
---- correct output:
3.1415926536
---- user output:
3.1415926536
-- TEST CASE 2:
---- input:
1000
---- correct output:
3.1415926536
---- user output:
3.1415926536
-- TEST CASE 3:
---- input:
100
---- correct output:
3.1415926536
---- user output:
3.1415926536
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
